--- a/html-scrapbook.html
+++ b/html-scrapbook.html
@@ -2,34 +2,52 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=>, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My first webpage</title>
+    <title>html scrapbook</title>
 </head>
 <body>
-    <img src="me.jpg" alt="great picture of gareth">
-    <h1 class="heading"> Gareth Beer</h1>
-    <h2> <a href="#aboutme"> About me</a></h2>
-    <h3><a href="#education">Education</a></h3>
-    <h4><a href="#hobbie">Hobbies</a></h4>
-    <h5><a href="#employment">Emplyments</a></h5>
-    <h6><a href="#socialmedia">Social media</a></h6>
+    <div class="headings">
+    <h1>This is a h1</h1>
+    <h2>This is a h2</h2>
+    <h3>This is a h3</h3>
+    <h4>This is a h4</h4>
+    <h5>This is a h5</h5>
+    <h6>This is a h6</h6>
+</div>
+<div class="loremparagraphs">
+    <p><strong>This is <span style="color:blue">Paragraph</span> one </strong> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam, ex, saepe pariatur molestias distinctio accusantium quod iste voluptatem est inventore doloribus. Voluptatibus, qui corporis, nihil cumque debitis sunt quam nisi nam adipisci, eum esse! Eum quod, iusto aut odit, nam vitae accusantium quasi eaque fugiat, aliquam repudiandae quae earum animi.</p>
 
-    <p id='aboutme'>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui, quibusdam minus. Doloribus eligendi mollitia molestias aut nihil consectetur inventore provident dolor laboriosam, vero sit eos commodi accusantium delectus numquam itaque libero. Delectus laboriosam quia molestiae, repellendus optio officia minus et fugit cupiditate voluptates, quisquam atque sint architecto repellat asperiores? Fugiat?</p>
+    <p><strong>This is <span style="color:blue">Paragraph </span> two </strong> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam, ex, saepe pariatur molestias distinctio accusantium quod iste voluptatem est inventore doloribus. Voluptatibus, qui corporis, nihil cumque debitis sunt quam nisi nam adipisci, eum esse! Eum quod, iusto aut odit, nam vitae accusantium quasi eaque fugiat, aliquam repudiandae quae earum animi.</p>
 
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti voluptatibus eaque itaque esse aliquam sint quis laborum pariatur a ducimus illo ex animi minus odio, dolorem molestias quod repellendus placeat eum quibusdam fuga. Nesciunt doloribus nulla velit voluptate ad, facilis deserunt quasi labore numquam, odio eius adipisci dicta neque vel!</p>
+    <p><strong>This is <span style="color:blue">Paragraph </span> three </strong> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam, ex, saepe pariatur molestias distinctio accusantium quod iste voluptatem est inventore doloribus. Voluptatibus, qui corporis, nihil cumque debitis sunt quam nisi nam adipisci, eum esse! <br>Eum quod, iusto aut odit, nam vitae accusantium quasi eaque fugiat, aliquam repudiandae quae earum animi.</p>
 
-    <p id='education'>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum architecto praesentium odit. Libero deleniti hic iste beatae sed mollitia repudiandae reiciendis quis atque doloribus dolores, dolor exercitationem vero voluptatem aut tempora quibusdam tempore dicta, accusantium magnam omnis. Architecto iusto, accusamus quidem, a, quisquam non aliquam ratione doloribus rerum inventore eos reiciendis aut quasi sint repudiandae. Dolore reiciendis doloremque, ipsa voluptatibus necessitatibus sed nam ipsam perspiciatis voluptate laboriosam deleniti, animi neque dignissimos quibusdam provident unde eum expedita accusantium est soluta excepturi corrupti. Optio, tempora magni enim, quae ab autem delectus velit illo natus labore reprehenderit cupiditate nihil eligendi dolorem doloremque nostrum?</p>
+    <p>Quote of the day:</p>
 
-    <p id='hobbie'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, unde quod aspernatur magni numquam necessitatibus voluptatibus ratione officiis tenetur corporis iste pariatur doloribus esse sunt laudantium suscipit accusantium repudiandae sed soluta consectetur doloremque. Nemo est voluptatibus veniam repellendus quo, laboriosam, quasi optio, error perferendis iste dolore maiores saepe dolorum et blanditiis reiciendis! Libero, eos enim provident laborum ipsam totam alias molestias, quae excepturi ea facilis maxime explicabo eveniet distinctio quod dignissimos! Hic nesciunt rem quas facilis. Non assumenda id error. Illum tempore eaque distinctio alias vitae! Reprehenderit dolores alias repellendus voluptates similique possimus. Molestias cumque maxime perferendis debitis facilis eaque?</p>
-
-    <p id='employment'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum laboriosam blanditiis earum dolor aliquam natus praesentium dicta culpa, accusantium ab ipsam hic aliquid neque. Animi commodi quidem repudiandae magnam cum?</p>
-
-    <ol id='socialmedia'>
-        <li>Facebook</li>
-        <li>Instagram</li>
-        <li>GitHub</li>
+    <quote>“Jet from Gladiators to host a millennium barn dance at Yeovil aerodrome. Properly policed. It must not, I repeat not, turn into an all-night rave.”</quote>
+</div>
+<div class="lists">
+    <ol>
+        <li>This is numero uno </li>
+        <li>This is number...2</li>
+        <li>This is count tri</li>
     </ol>
-    <span></span>
+
+    <ul>
+        <li>This is just the top item no numbers involved</li>
+        <li>This is jus the second item who is just as important as item above - honest</li>
+        <li>anndd lastly this item</li>
+    </ul>
+
+    <p>Links to social media</p>
+    <ul>
+        <li><a href="https://github.com/GarethBeer" target=_blank >GitHub</a></li>
+        <li><a href="https://www.instagram.com/misterbeer89/" target=_blank>Instagram</a></li>
+        
+
+    </ul>
+</div>
+
+
 </body>
 </html>
